--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -3,7 +3,7 @@ loaderVersion="[40]"
 license="ARR"
 [[mods]]
 modId="dragon_meal"
-version="1.0.1"
+version="2"
 displayName="Dragon Meal"
 description='''A simple QOL addon for the Isle of Berk Mod that speeds up Dragon growth.'''
-authors="Kesselot"
+authors="Kesselot and Asbestosstar"
